Cleaning up code to meet Google Java guidelines
Passing all tests!